--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@moralisweb3/api-utils": "^2.7.4",
     "@moralisweb3/evm-api": "^2.7.4",
+    "@moralisweb3/common-auth-utils": "^2.7.4",
     "@moralisweb3/auth": "^2.7.4",
     "@moralisweb3/sol-api": "^2.7.4",
     "axios": "^0.27.2",
