add missing dependency

--- a/packages/common/authUtils/package.json
+++ b/packages/common/authUtils/package.json
@@ -30,6 +30,7 @@
     "@ethersproject/abi": "^5.7.0",
     "@moralisweb3/common-core": "^2.7.4",
     "@moralisweb3/common-evm-utils": "^2.7.4",
+    "@moralisweb3/common-sol-utils": "^2.7.4",
     "@moralisweb3/streams-typings": "^1.0.5"
   }
 }
