--- a/packages/client/backendAdapter/general/package.json
+++ b/packages/client/backendAdapter/general/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@moralisweb3/common-core": "^2.7.4",
     "@moralisweb3/client-backend-adapter-utils": "^2.7.4"
   }
 }
