--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -18,7 +18,6 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
-    "moralis": "^2.7.4",
     "react-dom": "^18.2.0",
     "next-auth": "^4.16.4",
     "next": "^13.0.3",
@@ -31,10 +30,10 @@
     "@moralisweb3/auth": "^2.7.4",
     "@moralisweb3/sol-api": "^2.7.4",
     "axios": "^0.27.2",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "moralis": "^2.7.4"
   },
   "peerDependencies": {
-    "moralis": ">=2.7.4",
     "next-auth": ">=4.16.4",
     "next": ">=12.2.5",
     "react-dom": ">=17.0.0",
