--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -7,6 +7,13 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "moralis": {
+    "name": "Evm Api",
+    "type": "integration",
+    "scope": "server",
+    "description": "Integration of Moralis in NextJs",
+    "long_description": "Integration of Moralis in NextJs"
+  },
   "files": [
     "lib/*"
   ],
