--- a/packages/codegen/tsconfig.json
+++ b/packages/codegen/tsconfig.json
@@ -7,7 +7,10 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "module": "es2022",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "target": "es6",
+    "noUnusedParameters": false,
+    "noUnusedLocals": false
   },
   "include": ["src/**/*"]
 }
