--- a/packages/common/evmUtils/package.json
+++ b/packages/common/evmUtils/package.json
@@ -7,6 +7,13 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "moralis": {
+    "name": "Evm utilities",
+    "type": "utils",
+    "scope": "common",
+    "description": "Utilities, operations, datatypes and types related to Evm",
+    "long_description": "Utilities, operations, datatypes and types related to Evm"
+  },
   "files": [
     "lib/*"
   ],
