--- a/packages/parseServer/package.json
+++ b/packages/parseServer/package.json
@@ -7,6 +7,13 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "moralis": {
+    "name": "Parse server",
+    "type": "integration",
+    "scope": "server",
+    "description": "Integration of Moralis in parse-server",
+    "long_description": "Integration of Moralis in parse-server"
+  },
   "files": [
     "lib/*"
   ],
