--- a/packages/solUtils/package.json
+++ b/packages/solUtils/package.json
@@ -7,6 +7,14 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "moralis": {
+    "name": "Solana Utilities",
+    "type": "utils",
+    "scope": "server",
+    "deprecated": true,
+    "description": "Deprecated: use @moralis/common-evm-utils instead",
+    "long_description": "Deprecated: use @moralis/common-evm-utils instead"
+  },
   "files": [
     "lib/*"
   ],
