chore: remove obsolete long_description data

--- a/packages/apiUtils/package.json
+++ b/packages/apiUtils/package.json
@@ -11,8 +11,7 @@
     "name": "Api Utilities",
     "type": "utils",
     "scope": "server",
-    "description": "Utilities and types to handle logic for api calls",
-    "long_description": "Utilities and types to handle logic for api calls"
+    "description": "Utilities and types to handle logic for api calls"
   },
   "files": [
     "lib/*"
