--- a/packages/client/apiUtils/package.json
+++ b/packages/client/apiUtils/package.json
@@ -11,8 +11,7 @@
     "name": "Api Utilities for client-side",
     "type": "utils",
     "scope": "client",
-    "description": "Client-side utilities for api calls",
-    "long_description": "Client-side utilities for api calls"
+    "description": "Client-side utilities for api calls"
   },
   "files": [
     "lib/*"
