--- a/packages/common/authUtils/package.json
+++ b/packages/common/authUtils/package.json
@@ -11,8 +11,7 @@
     "name": "Auth utilities",
     "type": "utils",
     "scope": "common",
-    "description": "Utilities, operations, datatypes, and types related to Auth",
-    "long_description": "Utilities, operations, datatypes, and types related to Auth"
+    "description": "Utilities, operations, datatypes, and types related to Auth"
   },
   "files": [
     "lib/*"
