--- a/packages/common/core/package.json
+++ b/packages/common/core/package.json
@@ -11,8 +11,7 @@
     "name": "Core module",
     "type": "core",
     "scope": "common",
-    "description": "All core logic related to the SDK",
-    "long_description": "This module is responsible for all core functionalities within any Moralis module. It is a required dependency for any functionalitiy of the SDK to work properly. "
+    "description": "All core logic related to the SDK"
   },
   "files": [
     "lib/*"
