--- a/packages/common/evmUtils/package.json
+++ b/packages/common/evmUtils/package.json
@@ -11,8 +11,7 @@
     "name": "Evm utilities",
     "type": "utils",
     "scope": "common",
-    "description": "Utilities, operations, datatypes and types related to Evm",
-    "long_description": "Utilities, operations, datatypes and types related to Evm"
+    "description": "Utilities, operations, datatypes and types related to Evm"
   },
   "files": [
     "lib/*"
