--- a/packages/common/solUtils/package.json
+++ b/packages/common/solUtils/package.json
@@ -11,8 +11,7 @@
     "name": "Solana utilities",
     "type": "utils",
     "scope": "common",
-    "description": "Utilities, operations, datatypes and types related to Solana",
-    "long_description": "Utilities, operations, datatypes and types related to Solana"
+    "description": "Utilities, operations, datatypes and types related to Solana"
   },
   "files": [
     "lib/*"
