--- a/packages/evmApi/package.json
+++ b/packages/evmApi/package.json
@@ -11,8 +11,7 @@
     "name": "Evm Api",
     "type": "feature",
     "scope": "server",
-    "description": "Make calls to the Evm blockchain via Moralis Evm Apis",
-    "long_description": "Make calls to the Evm blockchain via Moralis Evm Apis"
+    "description": "Make calls to the Evm blockchain via Moralis Evm Apis"
   },
   "files": [
     "lib/*"
