--- a/packages/evmUtils/package.json
+++ b/packages/evmUtils/package.json
@@ -12,8 +12,7 @@
     "type": "utils",
     "scope": "server",
     "deprecated": true,
-    "description": "Deprecated: use @moralis/common-sol-utils instead",
-    "long_description": "Deprecated: use @moralis/common-sol-utils instead"
+    "description": "Deprecated: use @moralis/common-sol-utils instead"
   },
   "files": [
     "lib/*"
