--- a/packages/testUtils/package.json
+++ b/packages/testUtils/package.json
@@ -12,8 +12,7 @@
     "name": "Test utilities",
     "type": "internal",
     "scope": "internal",
-    "description": "Utilities related to integration and unit tests",
-    "long_description": "Utilities related to integration and unit tests"
+    "description": "Utilities related to integration and unit tests"
   },
   "scripts": {
     "lint": "eslint .",
