--- a/packages/typedocReadmeTheme/package.json
+++ b/packages/typedocReadmeTheme/package.json
@@ -8,8 +8,7 @@
     "name": "Typedoc Readme Theme",
     "type": "internal",
     "scope": "internal",
-    "description": "Theme to generate readme.com compatible docs",
-    "long_description": "Theme to generate readme.com compatible docs"
+    "description": "Theme to generate readme.com compatible docs"
   },
   "scripts": {
     "build": "tsc",
