--- a/demos/moralis-stream/package.json
+++ b/demos/moralis-stream/package.json
@@ -5,26 +5,26 @@
   "private": true,
   "dependencies": {
     "@moralisweb3/common-core": "^2.8.0",
-    "dotenv": "^16.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "envalid": "7.3.1",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "moralis": "^2.8.0",
     "ngrok": "^4.3.3",
-    "redis": "^4.2.0",
-    "web3-utils": "^1.7.5",
-    "cors": "^2.8.5"
+    "redis": "^4.5.1",
+    "web3-utils": "^1.8.1"
   },
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.28.0",
     "eslint-plugin-etc": "^2.0.2",
     "eslint-plugin-import": "^2.26.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.14"
+    "typescript": "^4.9.3"
   },
   "scripts": {
     "start": "ts-node src/index.ts",
