--- a/packages/apiUtils/package.json
+++ b/packages/apiUtils/package.json
@@ -20,9 +20,9 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.5",
-    "@moralisweb3/common-evm-utils": "^2.8.0"
+    "@moralisweb3/common-evm-utils": "^2.8.0",
+    "prettier": "^2.8.0",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "@moralisweb3/common-core": "^2.8.0",
