--- a/packages/client/firebaseApiUtils/package.json
+++ b/packages/client/firebaseApiUtils/package.json
@@ -17,13 +17,13 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "prettier": "^2.8.0",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "firebase": "^9.13.0",
     "@firebase/functions": "^0.8.8",
+    "@moralisweb3/client-api-utils": "^2.8.0",
     "@moralisweb3/common-core": "^2.8.0",
-    "@moralisweb3/client-api-utils": "^2.8.0"
+    "firebase": "^9.14.0"
   }
 }
