--- a/packages/parseServer/package.json
+++ b/packages/parseServer/package.json
@@ -17,19 +17,19 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
-    "@types/parse": "^2.18.18",
     "@types/express": "4.17.14",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "@types/parse": "^2.18.18",
+    "prettier": "^2.8.0",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@moralisweb3/api-utils": "^2.8.0",
     "@moralisweb3/common-core": "^2.8.0",
     "@moralisweb3/streams": "^2.8.0",
-    "@moralisweb3/api-utils": "^2.8.0",
     "@moralisweb3/streams-typings": "^1.0.5",
+    "body-parser": "^1.20.0",
+    "express": "^4.18.2",
     "moralis": "^2.8.0",
-    "express": "^4.18.1",
-    "parse": "3.4.4",
-    "body-parser": "^1.20.0"
+    "parse": "3.5.1"
   }
 }
