--- a/packages/create-moralis-dapp/tsconfig.json
+++ b/packages/create-moralis-dapp/tsconfig.json
@@ -6,9 +6,6 @@
     "rootDir": "./src",
     "resolveJsonModule": true
   },
-  "include": [
-    "src/**/*",
-    "types/**/*"
-  ],
+  "include": ["src/**/*", "types/**/*"],
   "exclude": ["src/generators/**/template/**"]
 }
