--- a/packages/create-moralis-dapp/package.json
+++ b/packages/create-moralis-dapp/package.json
@@ -28,6 +28,7 @@
     "chalk": "^5.0.1",
     "fs-extra": "^10.1.0",
     "inquirer": "^8.0.0",
-    "axios": "^1.2.0"
+    "axios": "^1.2.0",
+    "lodash": "^4.17.21"
   }
 }
