--- a/demos/firebase-auth-ext/hosting/package.json
+++ b/demos/firebase-auth-ext/hosting/package.json
@@ -11,26 +11,26 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.58",
+    "@types/node": "^18.11.11",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
     "@walletconnect/web3-provider": "^1.8.0",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.3",
-    "web-vitals": "^2.1.4",
-    "assert": "^2.0.0",
-    "buffer": "^6.0.3",
+    "stream-browserify": "^3.0.0",
+    "typescript": "^4.9.3",
     "util": "^0.12.4",
-    "stream-browserify": "^3.0.0"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "react-app-rewired": "^2.2.1",
     "@moralisweb3/eslint-config": "^1.0.1",
-    "eslint-plugin-etc": "^2.0.2"
+    "cross-env": "^7.0.3",
+    "eslint-plugin-etc": "^2.0.2",
+    "react-app-rewired": "^2.2.1"
   },
   "scripts": {
     "lint": "eslint --ext .js,.ts ./src",
