--- a/demos/parse-server-migration-react-client/package.json
+++ b/demos/parse-server-migration-react-client/package.json
@@ -33,7 +33,7 @@
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "typescript": "^4.8.2",
+    "typescript": "^4.9.3",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
@@ -61,9 +61,9 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "react-app-rewired": "^2.2.1",
     "@moralisweb3/eslint-config": "^1.0.1",
-    "eslint-plugin-etc": "^2.0.2"
+    "cross-env": "^7.0.3",
+    "eslint-plugin-etc": "^2.0.2",
+    "react-app-rewired": "^2.2.1"
   }
 }
