--- a/packages/client/firebaseApiUtils/package.json
+++ b/packages/client/firebaseApiUtils/package.json
@@ -18,12 +18,12 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "firebase": "^9.13.0",
     "@firebase/functions": "^0.8.8",
+    "@moralisweb3/client-api-utils": "^2.8.2",
     "@moralisweb3/common-core": "^2.8.2",
-    "@moralisweb3/client-api-utils": "^2.8.2"
+    "firebase": "^9.13.0"
   }
 }
