--- a/packages/client/firebaseAuthUtils/package.json
+++ b/packages/client/firebaseAuthUtils/package.json
@@ -18,12 +18,12 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "firebase": "^9.13.0",
-    "@firebase/functions": "^0.8.8",
     "@firebase/app": "^0.8.3",
-    "@firebase/auth": "^0.20.11"
+    "@firebase/auth": "^0.20.11",
+    "@firebase/functions": "^0.8.8",
+    "firebase": "^9.13.0"
   }
 }
