--- a/packages/client/firebaseEvmApi/package.json
+++ b/packages/client/firebaseEvmApi/package.json
@@ -18,15 +18,15 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "firebase": "^9.13.0",
     "@firebase/app": "^0.8.3",
     "@firebase/functions": "^0.8.8",
+    "@moralisweb3/client-evm-api": "^2.8.2",
+    "@moralisweb3/client-firebase-api-utils": "^2.8.2",
     "@moralisweb3/common-core": "^2.8.2",
     "@moralisweb3/common-evm-utils": "^2.8.2",
-    "@moralisweb3/client-evm-api": "^2.8.2",
-    "@moralisweb3/client-firebase-api-utils": "^2.8.2"
+    "firebase": "^9.13.0"
   }
 }
