--- a/packages/client/firebaseEvmAuth/package.json
+++ b/packages/client/firebaseEvmAuth/package.json
@@ -18,13 +18,13 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "firebase": "^9.10.0",
-    "@firebase/auth": "^0.20.11",
-    "@moralisweb3/client-firebase-auth-utils": "^2.8.2",
     "@ethersproject/providers": "^5.7.1",
-    "@metamask/detect-provider": "^1.2.0"
+    "@firebase/auth": "^0.20.11",
+    "@metamask/detect-provider": "^1.2.0",
+    "@moralisweb3/client-firebase-auth-utils": "^2.8.2",
+    "firebase": "^9.10.0"
   }
 }
