--- a/packages/client/firebaseSolAuth/package.json
+++ b/packages/client/firebaseSolAuth/package.json
@@ -18,12 +18,12 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "firebase": "^9.10.0",
     "@firebase/auth": "^0.20.11",
     "@moralisweb3/client-firebase-auth-utils": "^2.8.2",
-    "bs58": "^5.0.0"
+    "bs58": "^5.0.0",
+    "firebase": "^9.10.0"
   }
 }
