--- a/packages/parseServer/package.json
+++ b/packages/parseServer/package.json
@@ -23,19 +23,19 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
-    "@types/parse": "^2.18.18",
     "@types/express": "4.17.14",
+    "@types/parse": "^2.18.18",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@moralisweb3/api-utils": "^2.8.2",
     "@moralisweb3/common-core": "^2.8.2",
     "@moralisweb3/streams": "^2.8.2",
-    "@moralisweb3/api-utils": "^2.8.2",
     "@moralisweb3/streams-typings": "^1.0.5",
-    "moralis": "^2.8.2",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "parse": "3.4.4",
-    "body-parser": "^1.20.0"
+    "moralis": "^2.8.2",
+    "parse": "3.4.4"
   }
 }
