--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -32,17 +32,17 @@
     "jest": "^28.0.3",
     "openapi-typescript": "^5.2.0",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@ethersproject/abi": "^5.7.0",
     "@moralisweb3/api-utils": "^2.8.2",
     "@moralisweb3/common-core": "^2.8.2",
     "@moralisweb3/common-evm-utils": "^2.8.2",
     "@moralisweb3/common-streams-utils": "^2.8.2",
     "@moralisweb3/streams-typings": "^1.0.5",
     "ethereumjs-util": "^7.1.0",
-    "web3-eth-abi": "^1.8.0",
     "ethers": "^5.7.1",
-    "@ethersproject/abi": "^5.7.0"
+    "web3-eth-abi": "^1.8.0"
   }
 }
