--- a/packages/common/authUtils/package.json
+++ b/packages/common/authUtils/package.json
@@ -27,6 +27,8 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
+    "@moralisweb3/eslint-config": "^1.0.1",
+    "eslint": "^8.29.0",
     "eslint-plugin-jest": "^26.8.3",
     "jest": "^28.0.3",
     "typescript": "^4.9.3"
