--- a/packages/common/evmUtils/package.json
+++ b/packages/common/evmUtils/package.json
@@ -27,6 +27,9 @@
     "gen:api-types": "openapi-typescript https://deep-index.moralis.io/api-docs-2.1/v2.1/swagger.json --output src/operations/openapi.ts"
   },
   "devDependencies": {
+    "@moralisweb3/eslint-config": "^1.0.1",
+    "eslint": "^8.29.0",
+    "eslint-plugin-jest": "^26.8.3",
     "openapi-typescript": "^5.2.0",
     "typescript": "^4.9.3"
   },
