--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "@moralisweb3/eslint-config": "^1.0.1",
     "@moralisweb3/typedoc-readme-theme": "^1.0.0",
     "@types/estree": "^1.0.0",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^29.2.4",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "archiver": "^5.3.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.29.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.6",
     "fs-extra": "^10.1.0",
     "glob-fs": "^0.1.7",
-    "jest": "28",
+    "jest": "29.3.1",
     "nx": "^14.5.10",
     "openapi-types": "^12.0.0",
     "prettier": "^2.8.0",
     "rdme": "^7.5.0",
-    "ts-jest": "^28.0.3",
+    "ts-jest": "^29.0.3",
     "typedoc": "^0.23.10",
     "typedoc-plugin-markdown": "^3.13.4",
     "typescript": "^4.9.3",
