--- a/demos/firebase-auth-ext/hosting/package.json
+++ b/demos/firebase-auth-ext/hosting/package.json
@@ -7,13 +7,6 @@
     "@moralisweb3/client-firebase-auth-utils": "^2.8.2",
     "@moralisweb3/client-firebase-evm-auth": "^2.8.2",
     "@moralisweb3/client-firebase-sol-auth": "^2.8.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.4",
-    "@types/node": "^18.11.11",
-    "@types/react": "^18.0.19",
-    "@types/react-dom": "^18.0.6",
     "@walletconnect/web3-provider": "^1.8.0",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
@@ -27,8 +20,20 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/core": "7.20.5",
+    "@babel/plugin-syntax-flow": "7.18.6",
+    "@babel/plugin-transform-react-jsx": "7.19.0",
     "@moralisweb3/eslint-config": "^1.0.1",
+    "@testing-library/dom": "8.19.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.11",
+    "@types/react": "^18.0.19",
+    "@types/react-dom": "^18.0.6",
     "cross-env": "^7.0.3",
+    "eslint": "^8.29.0",
     "eslint-plugin-etc": "^2.0.2",
     "react-app-rewired": "^2.2.1"
   },
