--- a/packages/client/firebaseEvmAuth/package.json
+++ b/packages/client/firebaseEvmAuth/package.json
@@ -3,7 +3,6 @@
   "author": "Moralis",
   "version": "2.8.2",
   "license": "MIT",
-  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -21,6 +20,7 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.1",
+    "@firebase/app": "^0.8.4",
     "@firebase/auth": "^0.20.11",
     "@metamask/detect-provider": "^1.2.0",
     "@moralisweb3/client-firebase-auth-utils": "^2.8.2",
