--- a/demos/express-proxy/package.json
+++ b/demos/express-proxy/package.json
@@ -5,12 +5,11 @@
   "private": true,
   "dependencies": {
     "@moralisweb3/common-core": "^2.8.2",
-    "@types/express-rate-limit": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
-    "express": "^4.18.1",
-    "express-rate-limit": "^6.5.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "moralis": "^2.8.2",
     "redis": "^4.2.0"
   },
@@ -18,6 +17,7 @@
     "@moralisweb3/eslint-config": "^1.0.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "eslint": "^8.29.0",
