--- a/demos/moralis-stream/package.json
+++ b/demos/moralis-stream/package.json
@@ -18,6 +18,7 @@
     "@moralisweb3/eslint-config": "^1.0.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/node": "18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "eslint": "^8.29.0",
