--- a/demos/nextjs/package.json
+++ b/demos/nextjs/package.json
@@ -14,19 +14,21 @@
     "ethers": "5.6.9",
     "moralis": "^2.8.2",
     "next": "12.2.5",
-    "next-auth": "4.10.3",
+    "next-auth": "4.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "wagmi": "^0.5.11"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
     "@moralisweb3/eslint-config": "^1.0.1",
     "@next/eslint-plugin-next": "^12.2.5",
     "@types/node": "18.11.11",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "5.45.1",
     "eslint": "^8.22.0",
     "eslint-config-next": "12.2.3",
     "eslint-plugin-etc": "^2.0.2",
