--- a/demos/parse-server-migration-react-client/package.json
+++ b/demos/parse-server-migration-react-client/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/plugin-syntax-flow": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/runtime": "^7.16.3",
     "@chakra-ui/react": "^2.3.1",
+    "@chakra-ui/styled-system": "^2.3.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -63,6 +69,7 @@
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.1",
     "cross-env": "^7.0.3",
+    "eslint": "^8.29.0",
     "eslint-plugin-etc": "^2.0.2",
     "react-app-rewired": "^2.2.1"
   }
