--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prettier": "^2.8.0",
     "rdme": "^7.5.0",
     "ts-jest": "^29.0.3",
-    "typedoc": "^0.23.10",
+    "typedoc": "^0.23.21",
     "typedoc-plugin-markdown": "^3.13.4",
     "typescript": "^4.9.3",
     "yarn": "^1.22.17"
@@ -66,5 +66,6 @@
   "resolutions": {
     "debug": "^3.1.0",
     "micromatch": "^4.0.2"
-  }
+  },
+  "packageManager": "yarn@3.3.0"
 }
