--- a/packages/client/firebaseApiUtils/package.json
+++ b/packages/client/firebaseApiUtils/package.json
@@ -20,6 +20,8 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@firebase/app": "^0.8.4",
+    "@firebase/app-types": "^0.8.1",
     "@firebase/functions": "^0.8.8",
     "@moralisweb3/client-api-utils": "^2.8.2",
     "@moralisweb3/common-core": "^2.8.2",
