--- a/packages/client/firebaseAuthUtils/package.json
+++ b/packages/client/firebaseAuthUtils/package.json
@@ -3,7 +3,6 @@
   "author": "Moralis",
   "version": "2.8.2",
   "license": "MIT",
-  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -20,7 +19,8 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@firebase/app": "^0.8.3",
+    "@firebase/app": "^0.8.4",
+    "@firebase/app-types": "^0.8.1",
     "@firebase/auth": "^0.20.11",
     "@firebase/functions": "^0.8.8",
     "firebase": "^9.13.0"
