--- a/packages/client/firebaseSolApi/package.json
+++ b/packages/client/firebaseSolApi/package.json
@@ -20,7 +20,8 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@firebase/app": "^0.8.3",
+    "@firebase/app": "^0.8.4",
+    "@firebase/app-types": "^0.8.1",
     "@firebase/functions": "^0.8.8",
     "@moralisweb3/client-firebase-api-utils": "^2.8.2",
     "@moralisweb3/client-sol-api": "^2.8.2",
