--- a/packages/client/firebaseSolAuth/package.json
+++ b/packages/client/firebaseSolAuth/package.json
@@ -3,7 +3,6 @@
   "author": "Moralis",
   "version": "2.8.2",
   "license": "MIT",
-  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -20,6 +19,8 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@firebase/app": "^0.8.4",
+    "@firebase/app-types": "^0.8.1",
     "@firebase/auth": "^0.20.11",
     "@moralisweb3/client-firebase-auth-utils": "^2.8.2",
     "bs58": "^5.0.0",
