--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -22,6 +22,7 @@
     "esmo": "^0.14.1",
     "glob": "^8.0.3",
     "handlebars": "^4.7.7",
+    "inquirer": "^8.0.0",
     "inquirer-autocomplete-prompt": "^2.0.0",
     "lodash": "^4.17.21",
     "markdown-table": "^3.0.2",
