--- a/packages/eslintConfig/package.json
+++ b/packages/eslintConfig/package.json
@@ -14,12 +14,14 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.22.0",
     "eslint-plugin-etc": "^2.0.2",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "eslint-plugin-etc": "^2.0.2",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "typescript": "^4.9.3"
   }
 }
