--- a/packages/evmApi/package.json
+++ b/packages/evmApi/package.json
@@ -3,7 +3,6 @@
   "author": "Moralis",
   "version": "2.8.2",
   "license": "MIT",
-  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -17,7 +16,7 @@
     "lib/*"
   ],
   "scripts": {
-    "test": "yarn jest --runInBand --detectOpenHandles --forceExit --ci",
+    "test": "jest --runInBand --detectOpenHandles --forceExit --ci",
     "test:coverage": "yarn run test --coverage --coverageReporters json-summary",
     "test:watch": "yarn run test --watch",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
