--- a/packages/apiUtils/package.json
+++ b/packages/apiUtils/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@moralisweb3/common-evm-utils": "^2.8.2",
+    "jest": "29.3.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
