--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -25,6 +25,7 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
+    "jest": "29.3.1",
     "openapi-typescript": "^5.2.0",
     "typescript": "^4.9.3"
   },
