--- a/packages/common/authUtils/package.json
+++ b/packages/common/authUtils/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.1",
     "eslint": "^8.29.0",
+    "jest": "29.3.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
