--- a/packages/common/core/package.json
+++ b/packages/common/core/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.1",
     "eslint": "^8.29.0",
+    "jest": "29.3.1",
     "msw": "0.49.1",
     "typescript": "^4.9.3"
   },
