--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -16,7 +16,7 @@
     "lib/*"
   ],
   "scripts": {
-    "test": "jest --runInBand --detectOpenHandles --forceExit --ci",
+    "test": "yarn jest --runInBand --detectOpenHandles --forceExit --ci",
     "test:coverage": "yarn run test --coverage --coverageReporters json-summary",
     "test:watch": "yarn run test --watch",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@moralisweb3/test-utils": "2.8.2",
     "@types/ethereumjs-util": "5.2.0",
+    "jest": "29.3.1",
     "openapi-typescript": "^5.2.0",
     "typescript": "^4.9.3"
   },
