missing core dep to demo added

--- a/demos/parse-server-migration/package.json
+++ b/demos/parse-server-migration/package.json
@@ -16,9 +16,11 @@
     "graphql-ws": "^5.10.1",
     "moralis": "^2.8.2",
     "ngrok": "^4.3.3",
-    "parse-server": "^5.2.7"
+    "parse-server": "^5.2.7",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.5",
     "@moralisweb3/eslint-config": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
