chore: commit required yarn files

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,13 @@ archive/**/*
 .idea/
 dump.rdb
 
-.yarn
+# Yarn https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 .npmrc
 .yarnrc
