--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "ts-jest": "^29.0.3",
     "typedoc": "^0.23.21",
     "typedoc-plugin-markdown": "^3.13.4",
-    "typescript": "^4.9.3",
-    "yarn": "^1.22.17"
+    "typescript": "^4.9.3"
   },
   "scripts": {
     "build": "yarn nx run-many --target=build --all",
