--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: '16'
           cache: 'yarn'
       - name: Install packages
-        run: ./yarn-monorepo-install
+        run: ./.github/actions/yarn-monorepo-install
       - name: Create the docs and pages directory locally in CI
         run: yarn build && yarn build:docs
       - name: Deploy Docs
