ci: fix install

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,21 @@ on:
       - main
       - beta
       - alpha
+    paths:
+      - 'package.json'
+      - '*.lock'
+      - '.yarnrc.yml'
+      - '.github/**'
   push:
     branches:
       - main
       - beta
       - alpha
+    paths:
+      - 'package.json'
+      - '*.lock'
+      - '.yarnrc.yml'
+      - '.github/**'
 jobs:
   setup:
     name: Setup
