ci: fix install

--- a/.github/actions/yarn-monorepo-install/action.yml
+++ b/.github/actions/yarn-monorepo-install/action.yml
@@ -34,7 +34,7 @@ runs:
     - name: Install dependencies
       shell: bash
       run: |
-        ./.github/actions/yarn-monorepo-install
+        yarn install --immutable --inline-builds
       env:
         # CI optimizations. Overrides yarnrc.yml options (or their defaults) in the CI action.
         YARN_ENABLE_GLOBAL_CACHE: 'false' # Use local cache folder to keep downloaded archives
