--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           node-version: '16'
           cache: 'yarn'
       - name: Install packages
-        run: ./.github/actions/yarn-monorepo-install
+        uses: ./.github/actions/yarn-monorepo-install
 
   lint:
     name: Eslint
@@ -56,7 +56,7 @@ jobs:
           node-version: '16'
           cache: 'yarn'
       - name: Install packages
-        run: ./.github/actions/yarn-monorepo-install
+        uses: ./.github/actions/yarn-monorepo-install
       - name: ESLint
         run: yarn lint
         continue-on-error: true
@@ -85,7 +85,7 @@ jobs:
           node-version: '16'
           cache: 'yarn'
       - name: Install packages
-        run: ./.github/actions/yarn-monorepo-install
+        uses: ./.github/actions/yarn-monorepo-install
       - name: Prettier
         run: yarn format:check
 
