--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'package.json'
+      - '*.lock'
+      - '.yarnrc.yml'
+      - '.github/**'
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
@@ -20,7 +25,7 @@ jobs:
           node-version: '16'
           cache: 'yarn'
       - name: Install packages
-        run: ./.github/actions/yarn-monorepo-install
+        uses: ./.github/actions/yarn-monorepo-install
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
