--- a/demos/webpack/package.json
+++ b/demos/webpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-webpack-page",
+  "name": "demo-webpack",
   "author": "Moralis",
   "private": true,
   "version": "1.0.0",
@@ -9,7 +9,8 @@
     "serve": "http-server ./ -p 7777"
   },
   "dependencies": {
-    "@moralisweb3/client": "^2.8.1"
+    "@moralisweb3/client": "^2.8.1",
+    "@moralisweb3/client-connector-wallet-connect": "^2.8.1"
   },
   "devDependencies": {
     "http-server": "^14.1.1",
