--- a/packages/client/connector/walletConnect/package.json
+++ b/packages/client/connector/walletConnect/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@moralisweb3/client-backend-adapter-frontend-only",
+  "name": "@moralisweb3/client-connector-wallet-connect",
   "author": "Moralis",
   "version": "2.8.1",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
@@ -21,7 +21,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@moralisweb3/common-core": "^2.8.1",
-    "@moralisweb3/client-backend-adapter-utils": "^2.8.1"
+    "@moralisweb3/client-evm-auth": "^2.8.1",
+    "@walletconnect/web3-provider": "^1.8.0"
   }
 }
