fixes after review.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,5 +114,7 @@ jobs:
             common-sol-utils, ./packages/common/solUtils/coverage/coverage-summary.json
             common-streams-utils, ./packages/common/streamsUtils/coverage/coverage-summary.json
             streams, ./packages/streams/coverage/coverage-summary.json
+            client-auth-utils, ./packages/client/authUtils/coverage/coverage-summary.json
+            client-backend-adapter-utils, ./packages/client/backendAdapter/utils/coverage/coverage-summary.json
       - name: Find missing dependencies
         run: node scripts/findMissingDependencies.js
