fix: added workaround to support firebase + nextjs.

--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
       "demos/*",
       "demos/firebase-proxy/*",
       "demos/firebase-auth-ext/*",
-      "demos/firebase-streams-ext/*"
+      "demos/firebase-streams-ext/*",
+      "demos/firebase-nextjs/*"
     ]
   },
   "resolutions": {
