feat: @moralisweb3/express + codegen added

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -69,7 +69,7 @@ packageExtensions:
   '@web3auth/base-plugin@2.x':
     peerDependencies:
       '@babel/runtime': '*'
-  'demo-express-proxy@*':
+  'demo-express@*':
     peerDependencies:
       '@express': '*'
   'react-scripts@5.x':
