formatting ignore excluded for @moralisweb3/express

--- a/.prettierignore
+++ b/.prettierignore
@@ -12,6 +12,7 @@ packages/**/generated/**/*
 **/generated/**/*
 packages/core/src/version.ts
 **/src/operations/openapi.ts
+!packages/express/src/**/generated/**/*
 
 node_modules
 
