fix: dev dependencies fix

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -107,6 +107,9 @@ packageExtensions:
     peerDependencies:
       '@babel/core': '*'
       '@babel/plugin-transform-react-jsx': '*'
+  'ts-node-dev@2.x':
+    peerDependencies:
+      '@types/node': '*'
   'demo-nextjs@*':
     peerDependencies:
       '@babel-core': '*'
