--- a/packages/common/streamsUtils/package.json
+++ b/packages/common/streamsUtils/package.json
@@ -30,6 +30,7 @@
     "@moralisweb3/eslint-config": "^1.0.1",
     "eslint": "^8.29.0",
     "jest": "29.3.1",
+    "openapi-typescript": "^5.2.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
