--- a/demos/parse-server-migration-react-client/package.json
+++ b/demos/parse-server-migration-react-client/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/styled-system": "^2.3.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@parse/react": "^0.0.1-alpha.18",
     "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -31,6 +32,7 @@
     "magic-sdk": "^9.0.0",
     "moralis-v1": "^1.11.0",
     "os-browserify": "^0.3.0",
+    "parse": "^3.5.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
