chore: ignore peer dependency warning chakra

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,6 +4,9 @@ packageExtensions:
   '@chakra-ui/react@2.x':
     peerDependencies:
       '@chakra-ui/styled-system': '2.x'
+  '@chakra-ui/toast@2.x':
+    peerDependencies:
+      '@chakra-ui/styled-system': '2.x'
   '@firebase/analytics-compat@0.x':
     peerDependencies:
       '@firebase/app': '0.x'
